--- a/find.html
+++ b/find.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chats - Kokoa Clone</title>
+    <title>Find - Kokoa Clone</title>
   </head>
   <body>
     <div class="status-bar">
@@ -23,34 +23,40 @@
     </div>
 
     <header class="screen-header">
-      <h1 class="screen-header__title">Chats</h1>
+      <h1 class="screen-header__title">Find</h1>
       <div class="screen-header__icons">
-        <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="far fa-comment-dots fa-lg"></i></span>
-        <span><i class="fas fa-music fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i></span>
+        <span>
+          <i class="fas fa-search fa-lg"></i>
+        </span>
+        <span>
+          <span class="dot cog__dotnotification"></span>
+          <i class="fas fa-cog fa-lg"></i>
+        </span>
       </div>
     </header>
 
     <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="NS_face.png"
-            class="user-component__avatar user-component__avatar"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">NS Yoon Ji</h4>
-            <h6 class="user-component__subtitle">
-              [ Homework ]<br />user-component(채팅방)를 여러개<br />
-              추가 시 발생하는 margin-bottom 문제 해결
-            </h6>
-          </div>
+      <div class="find-icons">
+        <div class="find-icons__icon">
+          <i class="fas fa-qrcode fa-2x"></i><span>QR Code</span>
         </div>
-        <div class="user-component__column user-component__column--chats">
-          <span>21:22</span>
-          <span class="user-component__column--chats-time badge">1</span>
+        <div class="find-icons__icon">
+          <i class="far fa-address-book fa-2x"></i
+          ><span
+            >Add by<br />
+            Contacts</span
+          >
         </div>
+        <div class="find-icons__icon">
+          <i class="fas fa-fingerprint fa-2x"></i><span>Add by ID</span>
+        </div>
+        <div class="find-icons__icon">
+          <i class="far fa-envelope fa-2x"></i><span>Invite</span>
+        </div>
+      </div>
+      <div class="recommended-friends">
+        <h6 class="recommended-friends__title">Recommended Friends</h6>
+        <span>You have no recommended friends.</span>
       </div>
     </main>
 
@@ -64,7 +70,7 @@
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
             <span class="nav__notification badge">1</span>
-            <i class="fas fa-comment fa-2x"></i>
+            <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
