--- a/friends.html
+++ b/friends.html
@@ -94,7 +94,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="more.html">
-            <span class="nav__dotnotification"></span>
+            <span class="dot"></span>
             <i class="fas fa-ellipsis-h fa-2x"></i
           ></a>
         </li>
