--- a/find.html
+++ b/find.html
@@ -36,21 +36,21 @@
     </header>
 
     <main class="main-screen">
-      <div class="find-icons">
-        <div class="find-icons__icon">
+      <div class="icon-row">
+        <div class="icon-row__icon">
           <i class="fas fa-qrcode fa-2x"></i><span>QR Code</span>
         </div>
-        <div class="find-icons__icon">
-          <i class="far fa-address-book fa-2x"></i
-          ><span
+        <div class="icon-row__icon">
+          <i class="far fa-address-book fa-2x"></i>
+          <span
             >Add by<br />
             Contacts</span
           >
         </div>
-        <div class="find-icons__icon">
+        <div class="icon-row__icon">
           <i class="fas fa-fingerprint fa-2x"></i><span>Add by ID</span>
         </div>
-        <div class="find-icons__icon">
+        <div class="icon-row__icon">
           <i class="far fa-envelope fa-2x"></i><span>Invite</span>
         </div>
       </div>
@@ -70,7 +70,7 @@
             <h5 class="open-post__title">#BTS</h5>
             <h6 class="open-post__hashtags">#bts#army#friends</h6>
             <div class="open-post__members">
-              <img src="NS_face.jpeg" />
+              <img src="img/NS_face.jpeg" />
               <span class="open-post__member-count">802 members</span>
               <div class="divider"></div>
               <span class="open-post__member-status">Active</span>
@@ -78,7 +78,7 @@
           </div>
           <div class="open-post__column">
             <div class="open-post__photo">
-              <img src="NS.jpeg" />
+              <img src="img/NS.jpeg" />
               <div class="open-post__heart-count">
                 <i class="fas fa-heart fa-xs"></i><span>326</span>
               </div>
