--- a/friends.html
+++ b/friends.html
@@ -40,7 +40,7 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="NS_face.png"
+            src="img/NS_face.png"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
@@ -58,7 +58,7 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="kakaoCh.png"
+              src="img/kakaoCh.png"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text">
