--- a/settings.html
+++ b/settings.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chats - Kokoa Clone</title>
+    <title>Settings - Kokoa Clone</title>
   </head>
   <body>
     <div class="status-bar">
@@ -22,37 +22,7 @@
       </div>
     </div>
 
-    <header class="screen-header">
-      <h1 class="screen-header__title">Chats</h1>
-      <div class="screen-header__icons">
-        <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="far fa-comment-dots fa-lg"></i></span>
-        <span><i class="fas fa-music fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i></span>
-      </div>
-    </header>
-
-    <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="img/NS_face.png"
-            class="user-component__avatar user-component__avatar"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">NS Yoon Ji</h4>
-            <h6 class="user-component__subtitle">
-              [ Homework ]<br />user-component(채팅방)를 여러개<br />
-              추가 시 발생하는 margin-bottom 문제 해결
-            </h6>
-          </div>
-        </div>
-        <div class="user-component__column user-component__column--chats">
-          <span>21:22</span>
-          <span class="user-component__column--chats-time badge">1</span>
-        </div>
-      </div>
-    </main>
+    <main class="main-screen"></m ain>
 
     <nav class="nav">
       <ul class="nav__list">
@@ -64,7 +34,7 @@
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
             <span class="nav__notification badge">1</span>
-            <i class="fas fa-comment fa-2x"></i>
+            <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
