--- a/friends.html
+++ b/friends.html
@@ -101,6 +101,14 @@
       </ul>
     </nav>
 
+    <div id="splash-screen">
+      <i class="fas fa-comment"></i>
+    </div>
+
+    <div class="no-mobile">
+      <span>Your screen is too big</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
