--- a/settings.html
+++ b/settings.html
@@ -22,7 +22,45 @@
       </div>
     </div>
 
-    <main class="main-screen"></m ain>
+    <header class="alt-header">
+      <div class="alt-header__column">
+        <a href="more.html">
+          <i class="fas fa-angle-left fa-2x"></i>
+        </a>
+      </div>
+      <div class="alt-header__column">
+        <h1 class="alt-header__title">Settings</h1>
+      </div>
+      <div class="alt-header__column"><i class="fas fa-search fa-lg"></i></div>
+    </header>
+
+    <main class="main-screen settings-screen">
+      <ul class="settings-list">
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fas fa-bullhorn fa-lg"></i>
+            <span>Notice</span>
+          </div>
+          <div class="settings__setting-column"></div>
+        </li>
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fas fa-flask fa-lg"></i>
+            <span>Kokoa Lab</span>
+          </div>
+          <div class="settings__setting-column"></div>
+        </li>
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fas fa-info-circle fa-lg"></i>
+            <span>Version</span>
+          </div>
+          <div class="settings__setting-column setting__Version">
+            <span>Latest Version</span>
+          </div>
+        </li>
+      </ul>
+    </main>
 
     <nav class="nav">
       <ul class="nav__list">
@@ -50,6 +88,10 @@
         </li>
       </ul>
     </nav>
+
+    <div class="no-mobile">
+      <span>Your screen is too big</span>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
