--- a/friends.html
+++ b/friends.html
@@ -106,7 +106,7 @@
     </div>
 
     <div class="no-mobile">
-      <span>Your screen is too big</span>
+      <span>Your screen is too big 😅</span>
     </div>
 
     <script
