--- a/friends.html
+++ b/friends.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Friends - Kokoa Clone</title>
   </head>
-  <body>
+  <body id="friends-screen">
     <div class="status-bar">
       <div class="status-bar__column">
         <span>No Service</span>
@@ -67,8 +67,92 @@
               </h4>
             </div>
           </div>
-          <div class="user-component__column">
+          <div class="user-component__column--more">
             <span>2 </span><i class="fas fa-chevron-right fa-xs"></i>
+          </div>
+        </div>
+      </div>
+      <div class="friends-screen__friends">
+        <div class="friends-screen__friends-header">
+          <span>Friend</span>
+          <i class="fas fa-chevron-up fa-xs"></i>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="img/profile_iu.jpeg"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                IU
+              </h4>
+            </div>
+          </div>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="img/profile_유인나.png"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                유인나
+              </h4>
+            </div>
+          </div>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column img">
+            <img
+              src="img/profile_송중기.jpeg"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                송중기
+              </h4>
+            </div>
+          </div>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="img/profile_전소민.png"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                전소민
+              </h4>
+            </div>
+          </div>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="img/profile_이광수.jpeg"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                이광수
+              </h4>
+            </div>
+          </div>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="img/profile_전여빈.webp"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                전여빈
+              </h4>
+            </div>
           </div>
         </div>
       </div>
@@ -101,9 +185,9 @@
       </ul>
     </nav>
 
-    <div id="splash-screen">
+    <!-- <div id="splash-screen">
       <i class="fas fa-comment"></i>
-    </div>
+    </div> -->
 
     <div class="no-mobile">
       <span>Your screen is too big 😅</span>
