--- a/friends.html
+++ b/friends.html
@@ -85,7 +85,7 @@
             />
             <div class="user-component__text">
               <h4 class="user-component__title user-component__title--not-bold">
-                IU
+                이지은
               </h4>
             </div>
           </div>
@@ -185,9 +185,9 @@
       </ul>
     </nav>
 
-    <!-- <div id="splash-screen">
+    <div id="splash-screen">
       <i class="fas fa-comment"></i>
-    </div> -->
+    </div>
 
     <div class="no-mobile">
       <span>Your screen is too big 😅</span>
