--- a/src/chat_3.html
+++ b/src/chat_3.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat - Kokoa Clone</title>
   </head>
-  <body id="chat-screen">
+  <body id="chat-screen" class="chat_1">
     <div class="status-bar">
       <div class="status-bar__column">
         <span>No Service</span>
@@ -24,12 +24,12 @@
 
     <header class="alt-header">
       <div class="alt-header__column">
-        <a href="chats.html">
+        <a href="../chats.html">
           <i class="fas fa-angle-left fa-2x"></i>
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">NS Yoon Ji</h1>
+        <h1 class="alt-header__title">송중기</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>
@@ -40,22 +40,41 @@
     <main class="main-screen main-chat">
       <div class="chat__timestamp">Monday, May 24, 2021</div>
       <div class="message-row">
-        <img src="img/NS_face.png" />
+        <img
+          src="../img/profile_송중기.jpeg"
+          class="user-component__avatar--sm"
+        />
         <div class="message-row__content">
-          <span class="message__author">NS Yoon Ji</span>
+          <span class="message__author">송중기</span>
           <div class="message__info">
-            <span class="message__bubble">Hi</span>
-            <span class="message__time">21:27</span>
+            <img src="../img/빈센조.jpeg" />
+            <span class="message__time">21:30</span>
           </div>
         </div>
       </div>
-      <div class="message-row message-row--own">
+      <div class="message-row">
+        <img
+          src="../img/profile_송중기.jpeg"
+          class="user-component__avatar--sm"
+        />
         <div class="message-row__content">
+          <span class="message__author">송중기</span>
           <div class="message__info">
-            <span class="message__bubble"
-              >메세지가 양 사이드에서 오도록 만들기</span
-            >
-            <span class="message__time">21:27</span>
+            <span class="message__bubble">까사노 패밀리의 보스 빈센조다.</span>
+            <span class="message__time">21:30</span>
+          </div>
+        </div>
+      </div>
+      <div class="message-row">
+        <img
+          src="../img/profile_송중기.jpeg"
+          class="user-component__avatar--sm"
+        />
+        <div class="message-row__content">
+          <span class="message__author">송중기</span>
+          <div class="message__info">
+            <span class="message__bubble">Questo edificio è mio!</span>
+            <span class="message__time">21:31</span>
           </div>
         </div>
       </div>
