파일명 변경

--- a/chats.html
+++ b/chats.html
@@ -39,19 +39,19 @@
             <div class="user-component__column">
               <div class="user-component__group">
                 <img
-                  src="img/profile_하하.jpeg"
+                  src="img/profile_haha.jpeg"
                   class="user-component__avatar__group"
                 />
                 <img
-                  src="img/profile_유재석.jpeg"
+                  src="img/profile_yjs.jpeg"
                   class="user-component__avatar__group"
                 />
                 <img
-                  src="img/profile_김종국.jpeg"
+                  src="img/profile_kjk.jpeg"
                   class="user-component__avatar__group"
                 />
                 <img
-                  src="img/profile_이광수.jpeg"
+                  src="img/profile_lks.jpeg"
                   class="user-component__avatar__group"
                 />
               </div>
@@ -75,7 +75,7 @@
           <div class="user-component">
             <div class="user-component__column">
               <img
-                src="img/profile_전소민.png"
+                src="img/profile_jsm.png"
                 class="user-component__avatar user-component__avatar"
               />
               <div class="user-component__text">
@@ -95,7 +95,7 @@
           <div class="user-component">
             <div class="user-component__column">
               <img
-                src="img/profile_송중기.jpeg"
+                src="img/profile_sjk.jpeg"
                 class="user-component__avatar user-component__avatar"
               />
               <div class="user-component__text">
@@ -115,7 +115,7 @@
           <div class="user-component">
             <div class="user-component__column">
               <img
-                src="img/profile_전여빈.webp"
+                src="img/profile_jyb.webp"
                 class="user-component__avatar user-component__avatar"
               />
               <div class="user-component__text">
@@ -137,7 +137,7 @@
           <div class="user-component">
             <div class="user-component__column">
               <img
-                src="img/profile_유인나.png"
+                src="img/profile_yin.png"
                 class="user-component__avatar user-component__avatar"
               />
               <div class="user-component__text">
@@ -179,7 +179,7 @@
           <div class="user-component">
             <div class="user-component__column">
               <img
-                src="img/profile_이광수.jpeg"
+                src="img/profile_lks.jpeg"
                 class="user-component__avatar user-component__avatar"
               />
               <div class="user-component__text">
