--- a/friends.html
+++ b/friends.html
@@ -93,7 +93,7 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="img/profile_유인나.png"
+              src="img/profile_yin.png"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text">
@@ -106,7 +106,7 @@
         <div class="user-component">
           <div class="user-component__column img">
             <img
-              src="img/profile_송중기.jpeg"
+              src="img/profile_sjk.jpeg"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text">
@@ -119,7 +119,7 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="img/profile_전소민.png"
+              src="img/profile_jsm.png"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text">
@@ -132,7 +132,7 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="img/profile_이광수.jpeg"
+              src="img/profile_lks.jpeg"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text">
@@ -145,7 +145,7 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="img/profile_전여빈.webp"
+              src="img/profile_jyb.webp"
               class="user-component__avatar user-component__avatar--sm"
             />
             <div class="user-component__text">
