--- a/src/chat_1.html
+++ b/src/chat_1.html
@@ -48,10 +48,7 @@
         </div>
       </div>
       <div class="message-row">
-        <img
-          src="../img/profile_유재석.jpeg"
-          class="user-component__avatar--sm"
-        />
+        <img src="../img/profile_yjs.jpeg" class="user-component__avatar--sm" />
         <div class="message-row__content">
           <span class="message__author">유재석</span>
           <div class="message__info">
@@ -61,10 +58,7 @@
         </div>
       </div>
       <div class="message-row">
-        <img
-          src="../img/profile_전소민.png"
-          class="user-component__avatar--sm"
-        />
+        <img src="../img/profile_jsm.png" class="user-component__avatar--sm" />
         <div class="message-row__content">
           <span class="message__author">전소민</span>
           <div class="message__info">
@@ -74,10 +68,7 @@
         </div>
       </div>
       <div class="message-row">
-        <img
-          src="../img/profile_양세찬.jpeg"
-          class="user-component__avatar--sm"
-        />
+        <img src="../img/profile_ysc.jpeg" class="user-component__avatar--sm" />
         <div class="message-row__content">
           <span class="message__author">양세찬</span>
           <div class="message__info">
@@ -87,10 +78,7 @@
         </div>
       </div>
       <div class="message-row">
-        <img
-          src="../img/profile_김종국.jpeg"
-          class="user-component__avatar--sm"
-        />
+        <img src="../img/profile_kjk.jpeg" class="user-component__avatar--sm" />
         <div class="message-row__content">
           <span class="message__author">김종국</span>
           <div class="message__info">
@@ -101,7 +89,7 @@
       </div>
       <div class="message-row">
         <img
-          src="../img/profile_하하.jpeg"
+          src="../img/profile_haha.jpeg"
           class="user-component__avatar--sm"
         />
         <div class="message-row__content">
@@ -113,10 +101,7 @@
         </div>
       </div>
       <div class="message-row">
-        <img
-          src="../img/profile_송지효.jpeg"
-          class="user-component__avatar--sm"
-        />
+        <img src="../img/profile_sjh.jpeg" class="user-component__avatar--sm" />
         <div class="message-row__content">
           <span class="message__author">송지효</span>
           <div class="message__info">
@@ -126,10 +111,7 @@
         </div>
       </div>
       <div class="message-row">
-        <img
-          src="../img/profile_지석진.png"
-          class="user-component__avatar--sm"
-        />
+        <img src="../img/profile_jsj.png" class="user-component__avatar--sm" />
         <div class="message-row__content">
           <span class="message__author">지석진</span>
           <div class="message__info">
@@ -139,10 +121,7 @@
         </div>
       </div>
       <div class="message-row">
-        <img
-          src="../img/profile_이광수.jpeg"
-          class="user-component__avatar--sm"
-        />
+        <img src="../img/profile_lks.jpeg" class="user-component__avatar--sm" />
         <div class="message-row__content">
           <span class="message__author">이광수</span>
           <div class="message__info">
