--- a/src/chat_3.html
+++ b/src/chat_3.html
@@ -40,23 +40,17 @@
     <main class="main-screen main-chat">
       <div class="chat__timestamp">Monday, May 24, 2021</div>
       <div class="message-row">
-        <img
-          src="../img/profile_송중기.jpeg"
-          class="user-component__avatar--sm"
-        />
+        <img src="../img/profile_sjk.jpeg" class="user-component__avatar--sm" />
         <div class="message-row__content">
           <span class="message__author">송중기</span>
           <div class="message__info">
-            <img src="../img/빈센조.jpeg" />
+            <img src="../img/Vincenzo.jpeg" />
             <span class="message__time">21:30</span>
           </div>
         </div>
       </div>
       <div class="message-row">
-        <img
-          src="../img/profile_송중기.jpeg"
-          class="user-component__avatar--sm"
-        />
+        <img src="../img/profile_sjk.jpeg" class="user-component__avatar--sm" />
         <div class="message-row__content">
           <span class="message__author">송중기</span>
           <div class="message__info">
@@ -66,10 +60,7 @@
         </div>
       </div>
       <div class="message-row">
-        <img
-          src="../img/profile_송중기.jpeg"
-          class="user-component__avatar--sm"
-        />
+        <img src="../img/profile_sjk.jpeg" class="user-component__avatar--sm" />
         <div class="message-row__content">
           <span class="message__author">송중기</span>
           <div class="message__info">
