--- a/src/chat_7.html
+++ b/src/chat_7.html
@@ -48,10 +48,7 @@
         </div>
       </div>
       <div class="message-row">
-        <img
-          src="../img/profile_이광수.jpeg"
-          class="user-component__avatar--sm"
-        />
+        <img src="../img/profile_lks.jpeg" class="user-component__avatar--sm" />
         <div class="message-row__content">
           <span class="message__author">이광수</span>
           <div class="message__info">
@@ -61,10 +58,7 @@
         </div>
       </div>
       <div class="message-row">
-        <img
-          src="../img/profile_이광수.jpeg"
-          class="user-component__avatar--sm"
-        />
+        <img src="../img/profile_lks.jpeg" class="user-component__avatar--sm" />
         <div class="message-row__content">
           <span class="message__author">이광수</span>
           <div class="message__info">
@@ -74,10 +68,7 @@
         </div>
       </div>
       <div class="message-row">
-        <img
-          src="../img/profile_이광수.jpeg"
-          class="user-component__avatar--sm"
-        />
+        <img src="../img/profile_lks.jpeg" class="user-component__avatar--sm" />
         <div class="message-row__content">
           <span class="message__author">이광수</span>
           <div class="message__info">
