--- a/src/chat_4.html
+++ b/src/chat_4.html
@@ -40,10 +40,7 @@
     <main class="main-screen main-chat">
       <div class="chat__timestamp">Monday, May 24, 2021</div>
       <div class="message-row">
-        <img
-          src="../img/profile_전여빈.webp"
-          class="user-component__avatar--sm"
-        />
+        <img src="../img/profile_jyb.webp" class="user-component__avatar--sm" />
         <div class="message-row__content">
           <span class="message__author">전여빈</span>
           <div class="message__info">
