폰트,  user-component__group EDIT

--- a/chats.html
+++ b/chats.html
@@ -38,22 +38,26 @@
           <div class="user-component">
             <div class="user-component__column">
               <div class="user-component__group">
-                <img
-                  src="img/profile_haha.jpeg"
-                  class="user-component__avatar__group"
-                />
-                <img
-                  src="img/profile_yjs.jpeg"
-                  class="user-component__avatar__group"
-                />
-                <img
-                  src="img/profile_kjk.jpeg"
-                  class="user-component__avatar__group"
-                />
-                <img
-                  src="img/profile_lks.jpeg"
-                  class="user-component__avatar__group"
-                />
+                <div>
+                  <img
+                    src="img/profile_haha.jpeg"
+                    class="user-component__avatar__group"
+                  />
+                  <img
+                    src="img/profile_yjs.jpeg"
+                    class="user-component__avatar__group"
+                  />
+                </div>
+                <div>
+                  <img
+                    src="img/profile_kjk.jpeg"
+                    class="user-component__avatar__group"
+                  />
+                  <img
+                    src="img/profile_lks.jpeg"
+                    class="user-component__avatar__group"
+                  />
+                </div>
               </div>
               <div class="user-component__text">
                 <span class="user-component__title">런닝맨 멤버</span>
@@ -121,7 +125,7 @@
               <div class="user-component__text">
                 <h4 class="user-component__title">전여빈</h4>
                 <h6 class="user-component__subtitle">
-                  힘 있고돈 있으면<br />나보다 어려도 언니 오빠 삼촌이야.
+                  힘 있고 돈 있으면<br />나보다 어려도 언니 오빠 삼촌이야.
                 </h6>
               </div>
             </div>
