--- a/src/chat_3.html
+++ b/src/chat_3.html
@@ -44,7 +44,7 @@
         <div class="message-row__content">
           <span class="message__author">송중기</span>
           <div class="message__info">
-            <img src="../img/Vincenzo.jpeg" />
+            <img src="../img/vincenzo.jpeg" />
             <span class="message__time">21:30</span>
           </div>
         </div>
